# haversine

./: .clang-format  .clang-tidy  CMakeLists.txt  Harversine.cpp  Harversine.h  Info.plist  License.txt  README.markdown  WndController.h  WndController.mm  ZipCodes.cpp  ZipCodes.h  main.m
CMake/: Setup.cmake
Haversine.xcodeproj/: jaimerios.mode1v3  jaimerios.pbxuser  jaimerios.perspectivev3  project.pbxproj
Haversine.xcodeproj/xcshareddata/xcschemes/: Haversine.xcscheme
source/: Harversine.h  ZipCodes.cpp  haversine.cpp  haversine.h  zipcodes.cpp  zipcodes.h
source/mac/: Haversine_Prefix.pch  WndController.h  WndController.mm
source/mac/English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
source/mac/Haversine.xcodeproj/: jaimerios.pbxuser  project.pbxproj
source/mac/Haversine.xcodeproj/xcshareddata/xcschemes/: Haversine.xcscheme
source/win/: main.cpp
